# language-dataset

./: .gitattributes  CONTRIBUTING.md  LICENSE  Pipfile  README.md  REPORT.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: dataset.yml  meta.yml
data/github.com/0xxon/perl-nss/acb817194a17e02894b726077dcbea35a83531be/: X509.xs
data/github.com/3r1k0n/LOLCODEshenanigans/0c3bb1435f937ed7db539dd5f2b3adf92a99fa69/: ROCKPAPERMEOW.lol
data/github.com/99fk/Bat-To-Exe-Converter-Downloader/a3b00ae1b0c822bdaa72b58d92c25f7d1d3dcaad/: Bat_To_Exe_Converter_Downloader.pb
data/github.com/ALaDyn/gnuplots/66a3b1d0be6272c0d86d21cc75d68f3f956e1735/: multi-density.gnuplot
data/github.com/AcroMace/brainfoge/11567b7923ad48ee3b810b011ac36f93c7fb803a/: brainfoge.djs
data/github.com/Actinium-project/ln-plugin-m3/c9b5c8d1d1e06f3b91f9fee3e403103194a276e1/: LNPlugin.m3
data/github.com/AlanTupper/BlockIO-LSL/9e3eba42a64aefc376f2f023f46f54c5b0576960/: blockio.lsl
data/github.com/AlaskanEmily/transunit/865e339a6fca16c69f61781378c5187a8b182789/: transunit.compare.m
data/github.com/Alekaei/postfix.lol/bc736d5e07359956d1a75e8a8297755c8a1ce521/: postfix.lol
data/github.com/AlexMckey/Louv1.1x-PoCP-F_Oz/dc7a2d1368794db7933c48955809d72b1e7e4892/: Stak_Queue.oz
tools/: classify.py  classify_linguist.py  classify_linguist_strategies.py  classify_pygments.py  common.py  gen_meta.py  harvest.py  linguist_wrapper.rb  lint.py  prepare_commit.py  test_gen_meta.py  test_harvest.py  vote.py
(+1617 files in other folders)
